<?xml version="1.0"?>
<package format="2">
  <name>vdbfusion</name>
  <version>1.0.0</version>
  <description>ROS wrappper for the vdbfusion library</description>

  <maintainer email="kin_eng@163.com">Kin ZHANG</maintainer>
  <author email="saurabh.gupta1002@gmail.com">Saurabh Gupta</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>eigen_conversions</depend>

  <export>
  </export>

</package>
