<?xml version="1.0"?>
<package format="2">
  <name>vdbfusion_ros</name>
  <version>1.0.0</version>
  <description>The vdbfusion_mapping ROS1 package</description>
  <maintainer email="kin_eng@163.com">kin ZHANG</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>message_runtime</depend>
  <depend>message_filters</depend>

  <depend>pcl_ros</depend>

  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <depend>glog</depend>
  <depend>gflags</depend>
  <depend>eigen_conversions</depend>
  <depend>vdbfusion_mapping_msgs</depend>
  <depend>vdbfusion</depend>
  <depend>minkindr</depend>

  <export>
  </export>

</package>
