<?xml version="1.0"?>
<package format="2">
  <name>vdbfusion_mapping_msgs</name>
  <version>1.0.0</version>
  <description>Utilities to setup and run data for vdbfusion mapping </description>

  <author email="kin_eng@163.com">Kin ZHANG</author>
  <maintainer email="kin_eng@163.com">Kin ZHANG</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
